Remoção dos envios de emails. Utilizando webhooks do Discord como melhor alternativa. Adição do README.md

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,7 @@
-# MONGODB
-MONGODB_USER=
-MONGODB_PASS=
-
-# SIGAA
+# CREDENCIAIS SIGAA
 USUARIO=
 SENHA=
 
-# NODEMAILER
-NODEMAILER=
-EMAIL=
+# CREDENCIAIS DISCORD (WEBHOOK ID E WEBHOOK TOKEN)
+WEBHOOK_ID=
+WEBHOOK_TOKEN=
